# distributed-job-runner

./: README.md
job_service/: Cargo.toml  Dockerfile  init.cql  job-service-deployment.yml  job-service-hpa.yml  job-service-service.yml
job_service/src/: main.rs
scheduling-service-worker/: Cargo.toml  build.rs
scheduling-service-worker/proto/: task.proto
scheduling-service-worker/src/: main.rs
scheduling_service/: Cargo.toml  build.rs
scheduling_service/proto/: client.proto  task.proto
scheduling_service/src/: main.rs
