[package]
name = "job_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-macros = "0.5.0"
futures = "0.3.31"
hyper = "1.6.0"
scylla = "1.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features=["v4", "serde"] }
