[package]
name = "scheduling-service-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.5"
rdkafka = "0.37.0"
time = "0.3.41"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.13.0"
